fixup comment display
default ikiwiki comments listings are freaking ugly. this restores a
little sanity at the cost of a custom color taking out of my ass (of
night city, actually). we also reset the spacing around the actions
that was all messed up

--- a/jak.css
+++ b/jak.css
@@ -38,4 +38,16 @@ code {
   font-size: 80%;
 }
 
-
+/* comments fixup */
+.comment {
+    border: none;
+    padding: 1em;
+    margin: 1em;
+    background: #f3f3f3;
+}
+.actions ul {
+    margin: inherit;
+    padding: inherit;
+    height: inherit;
+    /* list-style-type: none; */
+}
